--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+/src/main/resources/NUS-SENSE-TIMELINE/
